syntax = "proto3";

package hello;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Second {
  // Sends a greeting
  rpc SayHi (Request) returns (Replay) {}
}





// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


// The request message containing the user's name.
message Request {
  string name = 1;
}

// The response message containing the greetings.
message Replay {
  string message = 1;
}

